--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ we were well fed and drunk all the time!</p>
 <footer class="footer">
     <div class="container">
         <div class="footer-logo"><a href="#"><img src="img/footer-logo.png" alt=""></a></div>
-        <span class="copyright">&copy; Knight Theme. All Rights Reserved</span>
+        <span class="copyright">&copy; iLink-TIC. Todos los derechos reservados</span>
         <div class="credits">
             <!-- 
                 All the links in the footer should remain intact. 
@@ -374,7 +374,7 @@ we were well fed and drunk all the time!</p>
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
             -->
-            <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            <span>Soluciones Tecnologicas - Desarrollo de Software - Diseño de Paginas Web</span>
         </div>
     </div>
 </footer>
