--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     Author: BootstrapMade
     Author URL: https://bootstrapmade.com
 ======================================================= -->
-
 </head>
 <body>
 <header class="header" id="header"><!--header-start-->
@@ -46,7 +45,7 @@
         <ul class="we-create animated fadeInUp delay-1s">
         	<li>We are a digital agency that loves crafting beautiful websites.</li>
         </ul>
-            <a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="#service">Contactanos</a>
     </div>
 </header><!--header-end-->
 
@@ -56,7 +55,7 @@
         	<li><a href="#header">Home</a></li>
             <li><a href="#service">Services</a></li>
             <li><a href="#Portfolio">Portfolio</a></li>
-            <li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
+            <li class="small-logo"><a href="#header"><img src="img/small-co.png" alt=""></a></li>
             <li><a href="#client">Clients</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -64,8 +63,6 @@
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
 </nav><!--main-nav-end-->
-
-
 
 <section class="main-section" id="service"><!--main-section-start-->
 	<div class="container">
