--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <header class="header" id="header"><!--header-start-->
 	<div class="container">
     	<figure class="logo animated fadeInDown delay-07s">
-        	<a href="#"><img src="img/co.png" alt=""></a>	
+        	<a href="#"><img src="img/logo.png" alt=""></a>	
         </figure>	
         <h1 class="animated fadeInDown delay-07s">Welcome To Knight Studios</h1>
         <ul class="we-create animated fadeInUp delay-1s">
@@ -55,7 +55,7 @@
         	<li><a href="#header">Home</a></li>
             <li><a href="#service">Services</a></li>
             <li><a href="#Portfolio">Portfolio</a></li>
-            <li class="small-logo"><a href="#header"><img src="img/small-co.png" alt=""></a></li>
+            <li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
             <li><a href="#client">Clients</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
